Assig3/parser.output
Terminals which are not used

   ERROR


State 2 conflicts: 6 shift/reduce
State 20 conflicts: 6 shift/reduce
State 29 conflicts: 6 shift/reduce
State 43 conflicts: 6 shift/reduce
State 66 conflicts: 6 shift/reduce, 1 reduce/reduce
State 84 conflicts: 6 shift/reduce, 1 reduce/reduce
State 131 conflicts: 12 shift/reduce
State 147 conflicts: 12 shift/reduce
State 153 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: global_decl_list

    2 global_decl_list: global_decl_list global_decl
    3                 | /* empty */

    4 global_decl: decl_list function_decl
    5            | function_decl

    6 function_decl: type ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE

    7 block: decl_list stmt_list
    8      | /* empty */

    9 stmt_list: stmt_list stmt
   10          | /* empty */

   11 param_list: param_var_decl
   12           | param_list MK_COMMA param_var_decl
   13           | /* empty */

   14 param_var_decl: param_type param_id_list

   15 param_id_list: ID param_id_tail

   16 param_id_tail: MK_LB CONST MK_RB param_id_tail
   17              | MK_LB MK_RB param_id_tail
   18              | /* empty */

   19 param_type: INT
   20           | FLOAT
   21           | VOID
   22           | STRUCT ID

   23 stmt: MK_LBRACE block MK_RBRACE
   24     | IF MK_LPAREN expr MK_RPAREN stmt else_tail
   25     | WHILE MK_LPAREN expr MK_RPAREN stmt
   26     | FOR MK_LPAREN assign_expr MK_SEMICOLON expr MK_SEMICOLON assign_expr MK_RPAREN stmt
   27     | assign_expr MK_SEMICOLON
   28     | WRITE MK_LPAREN SCONST MK_RPAREN MK_SEMICOLON
   29     | WRITE MK_LPAREN lhs MK_RPAREN MK_SEMICOLON
   30     | RETURN expr MK_SEMICOLON
   31     | error

   32 else_tail: ELSE stmt
   33          | /* empty */

   34 assign_expr: lhs OP_ASSIGN assign_expr_tail

   35 assign_expr_tail: expr
   36                 | READ MK_LPAREN MK_RPAREN
   37                 | FREAD MK_LPAREN MK_RPAREN
   38                 | function_call

   39 function_call: ID MK_LPAREN call_param_list MK_RPAREN

   40 call_param_list: lhs call_param_list_tail
   41                | CONST call_param_list_tail
   42                | /* empty */

   43 call_param_list_tail: MK_COMMA lhs call_param_list_tail
   44                     | MK_COMMA CONST call_param_list_tail
   45                     | /* empty */

   46 lhs: ID expr_id_tail expr_member

   47 expr_id_tail: MK_LB CONST MK_RB expr_id_tail
   48             | MK_LB ID MK_RB expr_id_tail
   49             | /* empty */

   50 expr_member: MK_DOT lhs
   51            | /* empty */

   52 expr: lhs
   53     | MK_LPAREN expr MK_RPAREN
   54     | expr binop expr
   55     | unop expr
   56     | CONST

   57 binop: OP_AND
   58      | OP_OR
   59      | OP_EQ
   60      | OP_NE
   61      | OP_LT
   62      | OP_GT
   63      | OP_LE
   64      | OP_GE
   65      | OP_PLUS
   66      | OP_MINUS
   67      | OP_TIMES
   68      | OP_DIVIDE

   69 unop: OP_NOT
   70     | OP_MINUS

   71 decl_list: decl_list decl
   72          | decl
   73          | /* empty */

   74 decl: type_decl MK_SEMICOLON
   75     | var_decl

   76 var_decl: type id_list MK_SEMICOLON

   77 id_list: ID id_tail id_list_tail

   78 id_list_tail: MK_COMMA id_list
   79             | /* empty */

   80 id_tail: MK_LB CONST MK_RB id_tail
   81        | OP_ASSIGN CONST
   82        | /* empty */

   83 type: INT
   84     | FLOAT
   85     | VOID
   86     | TYPEDEF_NAME
   87     | STRUCT ID struct_or_null_block
   88     | STRUCT struct_block

   89 struct_or_null_block: MK_LBRACE decl_list MK_RBRACE
   90                     | /* empty */

   91 struct_block: MK_LBRACE decl_list MK_RBRACE

   92 type_decl: struct_decl
   93          | typedef_decl

   94 struct_decl: STRUCT ID MK_LBRACE decl_list MK_RBRACE

   95 typedef_decl: TYPEDEF type ID


Terminals, with rules where they appear

$end (0) 0
error (256) 31
ID (258) 6 15 22 39 46 48 77 87 94 95
TYPEDEF_NAME (259) 86
CONST (260) 16 41 44 47 56 80 81
SCONST (261) 28
VOID (262) 21 85
INT (263) 19 83
FLOAT (264) 20 84
IF (265) 24
ELSE (266) 32
WHILE (267) 25
FOR (268) 26
STRUCT (269) 22 87 88 94
TYPEDEF (270) 95
READ (271) 36
FREAD (272) 37
WRITE (273) 28 29
OP_ASSIGN (274) 34 81
OP_OR (275) 58
OP_AND (276) 57
OP_NOT (277) 69
OP_EQ (278) 59
OP_NE (279) 60
OP_GT (280) 62
OP_LT (281) 61
OP_GE (282) 64
OP_LE (283) 63
OP_PLUS (284) 65
OP_MINUS (285) 66 70
OP_TIMES (286) 67
OP_DIVIDE (287) 68
MK_LB (288) 16 17 47 48 80
MK_RB (289) 16 17 47 48 80
MK_LPAREN (290) 6 24 25 26 28 29 36 37 39 53
MK_RPAREN (291) 6 24 25 26 28 29 36 37 39 53
MK_LBRACE (292) 6 23 89 91 94
MK_RBRACE (293) 6 23 89 91 94
MK_COMMA (294) 12 43 44 78
MK_SEMICOLON (295) 26 27 28 29 30 74 76
MK_DOT (296) 50
ERROR (297)
RETURN (298) 30


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1, on right: 0
global_decl_list (46)
    on left: 2 3, on right: 1 2
global_decl (47)
    on left: 4 5, on right: 2
function_decl (48)
    on left: 6, on right: 4 5
block (49)
    on left: 7 8, on right: 6 23
stmt_list (50)
    on left: 9 10, on right: 7 9
param_list (51)
    on left: 11 12 13, on right: 6 12
param_var_decl (52)
    on left: 14, on right: 11 12
param_id_list (53)
    on left: 15, on right: 14
param_id_tail (54)
    on left: 16 17 18, on right: 15 16 17
param_type (55)
    on left: 19 20 21 22, on right: 14
stmt (56)
    on left: 23 24 25 26 27 28 29 30 31, on right: 9 24 25 26 32
else_tail (57)
    on left: 32 33, on right: 24
assign_expr (58)
    on left: 34, on right: 26 27
assign_expr_tail (59)
    on left: 35 36 37 38, on right: 34
function_call (60)
    on left: 39, on right: 38
call_param_list (61)
    on left: 40 41 42, on right: 39
call_param_list_tail (62)
    on left: 43 44 45, on right: 40 41 43 44
lhs (63)
    on left: 46, on right: 29 34 40 43 50 52
expr_id_tail (64)
    on left: 47 48 49, on right: 46 47 48
expr_member (65)
    on left: 50 51, on right: 46
expr (66)
    on left: 52 53 54 55 56, on right: 24 25 26 30 35 53 54 55
binop (67)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68, on right: 54
unop (68)
    on left: 69 70, on right: 55
decl_list (69)
    on left: 71 72 73, on right: 4 7 71 89 91 94
decl (70)
    on left: 74 75, on right: 71 72
var_decl (71)
    on left: 76, on right: 75
id_list (72)
    on left: 77, on right: 76 78
id_list_tail (73)
    on left: 78 79, on right: 77
id_tail (74)
    on left: 80 81 82, on right: 77 80
type (75)
    on left: 83 84 85 86 87 88, on right: 6 76 95
struct_or_null_block (76)
    on left: 89 90, on right: 87
struct_block (77)
    on left: 91, on right: 88
type_decl (78)
    on left: 92 93, on right: 74
struct_decl (79)
    on left: 94, on right: 92
typedef_decl (80)
    on left: 95, on right: 93


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (global_decl_list)

    program           go to state 1
    global_decl_list  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: global_decl_list .
    2 global_decl_list: global_decl_list . global_decl

    TYPEDEF_NAME  shift, and go to state 4
    VOID          shift, and go to state 5
    INT           shift, and go to state 6
    FLOAT         shift, and go to state 7
    STRUCT        shift, and go to state 8
    TYPEDEF       shift, and go to state 9

    TYPEDEF_NAME  [reduce using rule 73 (decl_list)]
    VOID          [reduce using rule 73 (decl_list)]
    INT           [reduce using rule 73 (decl_list)]
    FLOAT         [reduce using rule 73 (decl_list)]
    STRUCT        [reduce using rule 73 (decl_list)]
    TYPEDEF       [reduce using rule 73 (decl_list)]
    $default      reduce using rule 1 (program)

    global_decl    go to state 10
    function_decl  go to state 11
    decl_list      go to state 12
    decl           go to state 13
    var_decl       go to state 14
    type           go to state 15
    type_decl      go to state 16
    struct_decl    go to state 17
    typedef_decl   go to state 18


state 3

    0 $accept: program $end .

    $default  accept


state 4

   86 type: TYPEDEF_NAME .

    $default  reduce using rule 86 (type)


state 5

   85 type: VOID .

    $default  reduce using rule 85 (type)


state 6

   83 type: INT .

    $default  reduce using rule 83 (type)


state 7

   84 type: FLOAT .

    $default  reduce using rule 84 (type)


state 8

   87 type: STRUCT . ID struct_or_null_block
   88     | STRUCT . struct_block
   94 struct_decl: STRUCT . ID MK_LBRACE decl_list MK_RBRACE

    ID         shift, and go to state 19
    MK_LBRACE  shift, and go to state 20

    struct_block  go to state 21


state 9

   95 typedef_decl: TYPEDEF . type ID

    TYPEDEF_NAME  shift, and go to state 4
    VOID          shift, and go to state 5
    INT           shift, and go to state 6
    FLOAT         shift, and go to state 7
    STRUCT        shift, and go to state 22

    type  go to state 23


state 10

    2 global_decl_list: global_decl_list global_decl .

    $default  reduce using rule 2 (global_decl_list)


state 11

    5 global_decl: function_decl .

    $default  reduce using rule 5 (global_decl)


state 12

    4 global_decl: decl_list . function_decl
   71 decl_list: decl_list . decl

    TYPEDEF_NAME  shift, and go to state 4
    VOID          shift, and go to state 5
    INT           shift, and go to state 6
    FLOAT         shift, and go to state 7
    STRUCT        shift, and go to state 8
    TYPEDEF       shift, and go to state 9

    function_decl  go to state 24
    decl           go to state 25
    var_decl       go to state 14
    type           go to state 15
    type_decl      go to state 16
    struct_decl    go to state 17
    typedef_decl   go to state 18


state 13

   72 decl_list: decl .

    $default  reduce using rule 72 (decl_list)


state 14

   75 decl: var_decl .

    $default  reduce using rule 75 (decl)


state 15

    6 function_decl: type . ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   76 var_decl: type . id_list MK_SEMICOLON

    ID  shift, and go to state 26

    id_list  go to state 27


state 16

   74 decl: type_decl . MK_SEMICOLON

    MK_SEMICOLON  shift, and go to state 28


state 17

   92 type_decl: struct_decl .

    $default  reduce using rule 92 (type_decl)


state 18

   93 type_decl: typedef_decl .

    $default  reduce using rule 93 (type_decl)


state 19

   87 type: STRUCT ID . struct_or_null_block
   94 struct_decl: STRUCT ID . MK_LBRACE decl_list MK_RBRACE

    MK_LBRACE  shift, and go to state 29

    $default  reduce using rule 90 (struct_or_null_block)

    struct_or_null_block  go to state 30


state 20

   91 struct_block: MK_LBRACE . decl_list MK_RBRACE

    TYPEDEF_NAME  shift, and go to state 4
    VOID          shift, and go to state 5
    INT           shift, and go to state 6
    FLOAT         shift, and go to state 7
    STRUCT        shift, and go to state 8
    TYPEDEF       shift, and go to state 9

    TYPEDEF_NAME  [reduce using rule 73 (decl_list)]
    VOID          [reduce using rule 73 (decl_list)]
    INT           [reduce using rule 73 (decl_list)]
    FLOAT         [reduce using rule 73 (decl_list)]
    STRUCT        [reduce using rule 73 (decl_list)]
    TYPEDEF       [reduce using rule 73 (decl_list)]
    $default      reduce using rule 73 (decl_list)

    decl_list     go to state 31
    decl          go to state 13
    var_decl      go to state 14
    type          go to state 32
    type_decl     go to state 16
    struct_decl   go to state 17
    typedef_decl  go to state 18


state 21

   88 type: STRUCT struct_block .

    $default  reduce using rule 88 (type)


state 22

   87 type: STRUCT . ID struct_or_null_block
   88     | STRUCT . struct_block

    ID         shift, and go to state 33
    MK_LBRACE  shift, and go to state 20

    struct_block  go to state 21


state 23

   95 typedef_decl: TYPEDEF type . ID

    ID  shift, and go to state 34


state 24

    4 global_decl: decl_list function_decl .

    $default  reduce using rule 4 (global_decl)


state 25

   71 decl_list: decl_list decl .

    $default  reduce using rule 71 (decl_list)


state 26

    6 function_decl: type ID . MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE
   77 id_list: ID . id_tail id_list_tail

    OP_ASSIGN  shift, and go to state 35
    MK_LB      shift, and go to state 36
    MK_LPAREN  shift, and go to state 37

    $default  reduce using rule 82 (id_tail)

    id_tail  go to state 38


state 27

   76 var_decl: type id_list . MK_SEMICOLON

    MK_SEMICOLON  shift, and go to state 39


state 28

   74 decl: type_decl MK_SEMICOLON .

    $default  reduce using rule 74 (decl)


state 29

   89 struct_or_null_block: MK_LBRACE . decl_list MK_RBRACE
   94 struct_decl: STRUCT ID MK_LBRACE . decl_list MK_RBRACE

    TYPEDEF_NAME  shift, and go to state 4
    VOID          shift, and go to state 5
    INT           shift, and go to state 6
    FLOAT         shift, and go to state 7
    STRUCT        shift, and go to state 8
    TYPEDEF       shift, and go to state 9

    TYPEDEF_NAME  [reduce using rule 73 (decl_list)]
    VOID          [reduce using rule 73 (decl_list)]
    INT           [reduce using rule 73 (decl_list)]
    FLOAT         [reduce using rule 73 (decl_list)]
    STRUCT        [reduce using rule 73 (decl_list)]
    TYPEDEF       [reduce using rule 73 (decl_list)]
    $default      reduce using rule 73 (decl_list)

    decl_list     go to state 40
    decl          go to state 13
    var_decl      go to state 14
    type          go to state 32
    type_decl     go to state 16
    struct_decl   go to state 17
    typedef_decl  go to state 18


state 30

   87 type: STRUCT ID struct_or_null_block .

    $default  reduce using rule 87 (type)


state 31

   71 decl_list: decl_list . decl
   91 struct_block: MK_LBRACE decl_list . MK_RBRACE

    TYPEDEF_NAME  shift, and go to state 4
    VOID          shift, and go to state 5
    INT           shift, and go to state 6
    FLOAT         shift, and go to state 7
    STRUCT        shift, and go to state 8
    TYPEDEF       shift, and go to state 9
    MK_RBRACE     shift, and go to state 41

    decl          go to state 25
    var_decl      go to state 14
    type          go to state 32
    type_decl     go to state 16
    struct_decl   go to state 17
    typedef_decl  go to state 18


state 32

   76 var_decl: type . id_list MK_SEMICOLON

    ID  shift, and go to state 42

    id_list  go to state 27


state 33

   87 type: STRUCT ID . struct_or_null_block

    MK_LBRACE  shift, and go to state 43

    $default  reduce using rule 90 (struct_or_null_block)

    struct_or_null_block  go to state 30


state 34

   95 typedef_decl: TYPEDEF type ID .

    $default  reduce using rule 95 (typedef_decl)


state 35

   81 id_tail: OP_ASSIGN . CONST

    CONST  shift, and go to state 44


state 36

   80 id_tail: MK_LB . CONST MK_RB id_tail

    CONST  shift, and go to state 45


state 37

    6 function_decl: type ID MK_LPAREN . param_list MK_RPAREN MK_LBRACE block MK_RBRACE

    VOID    shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    STRUCT  shift, and go to state 49

    $default  reduce using rule 13 (param_list)

    param_list      go to state 50
    param_var_decl  go to state 51
    param_type      go to state 52


state 38

   77 id_list: ID id_tail . id_list_tail

    MK_COMMA  shift, and go to state 53

    $default  reduce using rule 79 (id_list_tail)

    id_list_tail  go to state 54


state 39

   76 var_decl: type id_list MK_SEMICOLON .

    $default  reduce using rule 76 (var_decl)


state 40

   71 decl_list: decl_list . decl
   89 struct_or_null_block: MK_LBRACE decl_list . MK_RBRACE
   94 struct_decl: STRUCT ID MK_LBRACE decl_list . MK_RBRACE

    TYPEDEF_NAME  shift, and go to state 4
    VOID          shift, and go to state 5
    INT           shift, and go to state 6
    FLOAT         shift, and go to state 7
    STRUCT        shift, and go to state 8
    TYPEDEF       shift, and go to state 9
    MK_RBRACE     shift, and go to state 55

    decl          go to state 25
    var_decl      go to state 14
    type          go to state 32
    type_decl     go to state 16
    struct_decl   go to state 17
    typedef_decl  go to state 18


state 41

   91 struct_block: MK_LBRACE decl_list MK_RBRACE .

    $default  reduce using rule 91 (struct_block)


state 42

   77 id_list: ID . id_tail id_list_tail

    OP_ASSIGN  shift, and go to state 35
    MK_LB      shift, and go to state 36

    $default  reduce using rule 82 (id_tail)

    id_tail  go to state 38


state 43

   89 struct_or_null_block: MK_LBRACE . decl_list MK_RBRACE

    TYPEDEF_NAME  shift, and go to state 4
    VOID          shift, and go to state 5
    INT           shift, and go to state 6
    FLOAT         shift, and go to state 7
    STRUCT        shift, and go to state 8
    TYPEDEF       shift, and go to state 9

    TYPEDEF_NAME  [reduce using rule 73 (decl_list)]
    VOID          [reduce using rule 73 (decl_list)]
    INT           [reduce using rule 73 (decl_list)]
    FLOAT         [reduce using rule 73 (decl_list)]
    STRUCT        [reduce using rule 73 (decl_list)]
    TYPEDEF       [reduce using rule 73 (decl_list)]
    $default      reduce using rule 73 (decl_list)

    decl_list     go to state 56
    decl          go to state 13
    var_decl      go to state 14
    type          go to state 32
    type_decl     go to state 16
    struct_decl   go to state 17
    typedef_decl  go to state 18


state 44

   81 id_tail: OP_ASSIGN CONST .

    $default  reduce using rule 81 (id_tail)


state 45

   80 id_tail: MK_LB CONST . MK_RB id_tail

    MK_RB  shift, and go to state 57


state 46

   21 param_type: VOID .

    $default  reduce using rule 21 (param_type)


state 47

   19 param_type: INT .

    $default  reduce using rule 19 (param_type)


state 48

   20 param_type: FLOAT .

    $default  reduce using rule 20 (param_type)


state 49

   22 param_type: STRUCT . ID

    ID  shift, and go to state 58


state 50

    6 function_decl: type ID MK_LPAREN param_list . MK_RPAREN MK_LBRACE block MK_RBRACE
   12 param_list: param_list . MK_COMMA param_var_decl

    MK_RPAREN  shift, and go to state 59
    MK_COMMA   shift, and go to state 60


state 51

   11 param_list: param_var_decl .

    $default  reduce using rule 11 (param_list)


state 52

   14 param_var_decl: param_type . param_id_list

    ID  shift, and go to state 61

    param_id_list  go to state 62


state 53

   78 id_list_tail: MK_COMMA . id_list

    ID  shift, and go to state 42

    id_list  go to state 63


state 54

   77 id_list: ID id_tail id_list_tail .

    $default  reduce using rule 77 (id_list)


state 55

   89 struct_or_null_block: MK_LBRACE decl_list MK_RBRACE .
   94 struct_decl: STRUCT ID MK_LBRACE decl_list MK_RBRACE .

    MK_SEMICOLON  reduce using rule 94 (struct_decl)
    $default      reduce using rule 89 (struct_or_null_block)


state 56

   71 decl_list: decl_list . decl
   89 struct_or_null_block: MK_LBRACE decl_list . MK_RBRACE

    TYPEDEF_NAME  shift, and go to state 4
    VOID          shift, and go to state 5
    INT           shift, and go to state 6
    FLOAT         shift, and go to state 7
    STRUCT        shift, and go to state 8
    TYPEDEF       shift, and go to state 9
    MK_RBRACE     shift, and go to state 64

    decl          go to state 25
    var_decl      go to state 14
    type          go to state 32
    type_decl     go to state 16
    struct_decl   go to state 17
    typedef_decl  go to state 18


state 57

   80 id_tail: MK_LB CONST MK_RB . id_tail

    OP_ASSIGN  shift, and go to state 35
    MK_LB      shift, and go to state 36

    $default  reduce using rule 82 (id_tail)

    id_tail  go to state 65


state 58

   22 param_type: STRUCT ID .

    $default  reduce using rule 22 (param_type)


state 59

    6 function_decl: type ID MK_LPAREN param_list MK_RPAREN . MK_LBRACE block MK_RBRACE

    MK_LBRACE  shift, and go to state 66


state 60

   12 param_list: param_list MK_COMMA . param_var_decl

    VOID    shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    STRUCT  shift, and go to state 49

    param_var_decl  go to state 67
    param_type      go to state 52


state 61

   15 param_id_list: ID . param_id_tail

    MK_LB  shift, and go to state 68

    $default  reduce using rule 18 (param_id_tail)

    param_id_tail  go to state 69


state 62

   14 param_var_decl: param_type param_id_list .

    $default  reduce using rule 14 (param_var_decl)


state 63

   78 id_list_tail: MK_COMMA id_list .

    $default  reduce using rule 78 (id_list_tail)


state 64

   89 struct_or_null_block: MK_LBRACE decl_list MK_RBRACE .

    $default  reduce using rule 89 (struct_or_null_block)


state 65

   80 id_tail: MK_LB CONST MK_RB id_tail .

    $default  reduce using rule 80 (id_tail)


state 66

    6 function_decl: type ID MK_LPAREN param_list MK_RPAREN MK_LBRACE . block MK_RBRACE

    TYPEDEF_NAME  shift, and go to state 4
    VOID          shift, and go to state 5
    INT           shift, and go to state 6
    FLOAT         shift, and go to state 7
    STRUCT        shift, and go to state 8
    TYPEDEF       shift, and go to state 9

    TYPEDEF_NAME  [reduce using rule 73 (decl_list)]
    VOID          [reduce using rule 73 (decl_list)]
    INT           [reduce using rule 73 (decl_list)]
    FLOAT         [reduce using rule 73 (decl_list)]
    STRUCT        [reduce using rule 73 (decl_list)]
    TYPEDEF       [reduce using rule 73 (decl_list)]
    MK_RBRACE     reduce using rule 8 (block)
    MK_RBRACE     [reduce using rule 73 (decl_list)]
    $default      reduce using rule 73 (decl_list)

    block         go to state 70
    decl_list     go to state 71
    decl          go to state 13
    var_decl      go to state 14
    type          go to state 32
    type_decl     go to state 16
    struct_decl   go to state 17
    typedef_decl  go to state 18


state 67

   12 param_list: param_list MK_COMMA param_var_decl .

    $default  reduce using rule 12 (param_list)


state 68

   16 param_id_tail: MK_LB . CONST MK_RB param_id_tail
   17              | MK_LB . MK_RB param_id_tail

    CONST  shift, and go to state 72
    MK_RB  shift, and go to state 73


state 69

   15 param_id_list: ID param_id_tail .

    $default  reduce using rule 15 (param_id_list)


state 70

    6 function_decl: type ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block . MK_RBRACE

    MK_RBRACE  shift, and go to state 74


state 71

    7 block: decl_list . stmt_list
   71 decl_list: decl_list . decl

    TYPEDEF_NAME  shift, and go to state 4
    VOID          shift, and go to state 5
    INT           shift, and go to state 6
    FLOAT         shift, and go to state 7
    STRUCT        shift, and go to state 8
    TYPEDEF       shift, and go to state 9

    $default  reduce using rule 10 (stmt_list)

    stmt_list     go to state 75
    decl          go to state 25
    var_decl      go to state 14
    type          go to state 32
    type_decl     go to state 16
    struct_decl   go to state 17
    typedef_decl  go to state 18


state 72

   16 param_id_tail: MK_LB CONST . MK_RB param_id_tail

    MK_RB  shift, and go to state 76


state 73

   17 param_id_tail: MK_LB MK_RB . param_id_tail

    MK_LB  shift, and go to state 68

    $default  reduce using rule 18 (param_id_tail)

    param_id_tail  go to state 77


state 74

    6 function_decl: type ID MK_LPAREN param_list MK_RPAREN MK_LBRACE block MK_RBRACE .

    $default  reduce using rule 6 (function_decl)


state 75

    7 block: decl_list stmt_list .
    9 stmt_list: stmt_list . stmt

    error      shift, and go to state 78
    ID         shift, and go to state 79
    IF         shift, and go to state 80
    WHILE      shift, and go to state 81
    FOR        shift, and go to state 82
    WRITE      shift, and go to state 83
    MK_LBRACE  shift, and go to state 84
    RETURN     shift, and go to state 85

    MK_RBRACE  reduce using rule 7 (block)

    stmt         go to state 86
    assign_expr  go to state 87
    lhs          go to state 88


state 76

   16 param_id_tail: MK_LB CONST MK_RB . param_id_tail

    MK_LB  shift, and go to state 68

    $default  reduce using rule 18 (param_id_tail)

    param_id_tail  go to state 89


state 77

   17 param_id_tail: MK_LB MK_RB param_id_tail .

    $default  reduce using rule 17 (param_id_tail)


state 78

   31 stmt: error .

    $default  reduce using rule 31 (stmt)


state 79

   46 lhs: ID . expr_id_tail expr_member

    MK_LB  shift, and go to state 90

    $default  reduce using rule 49 (expr_id_tail)

    expr_id_tail  go to state 91


state 80

   24 stmt: IF . MK_LPAREN expr MK_RPAREN stmt else_tail

    MK_LPAREN  shift, and go to state 92


state 81

   25 stmt: WHILE . MK_LPAREN expr MK_RPAREN stmt

    MK_LPAREN  shift, and go to state 93


state 82

   26 stmt: FOR . MK_LPAREN assign_expr MK_SEMICOLON expr MK_SEMICOLON assign_expr MK_RPAREN stmt

    MK_LPAREN  shift, and go to state 94


state 83
